force-app/main/default/objects/ContactInsuranceAssociation__c/ContactInsuranceAssociation__c.object-meta.xml
<CustomObject>
    <description>The ContactInsurance junction object establishes a many-to-many relationship between Contacts and Insurance policies, allowing a single Contact to be associated with multiple Insurance policies and vice versa. This object is used to manage policyholders and beneficiaries related to an insurance policy.</description>
    <label>ContactInsuranceAssociation</label>
    <nameField>
        <displayFormat>CIA-{000000000}</displayFormat>
        <label>ContactInsuranceAssociation #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ContactInsuranceAssociations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>