force-app/main/default/objects/ContactInsuranceAssociation__c/fields/Insurance_Provider__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Provider__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; &amp; Insurance__r.Insurance_Provider__c, Insurance__r.Insurance_Provider__r.Name, &quot;Go to Insurance Provider&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance Provider</label>
    <type>Text</type>
</CustomField>