force-app/main/default/objects/ContactInsuranceAssociation__c/fields/Insurance_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Record_Type__c</fullName>
    <formula>Insurance__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance Record Type</label>
    <type>Text</type>
</CustomField>